# uav-fdml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conan_provider.cmake  conanfile.txt
.github/workflows/: build.yml  cmake-multi-platform.yml  tests.yml
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  main.cpp
apps/demo/include/: demo.h  demo_gui.h
apps/demo/src/: demo.cpp  demo_gui.cpp  main.cpp
apps/experiments/: CMakeLists.txt
apps/experiments/include/: experiment_options.h
apps/experiments/src/: ex_kdtree_construct.cpp  ex_kdtree_nn.cpp  ex_kdtree_nn_omp.cpp  experiment_accuracy.cpp
apps/predicate_visualization/: CMakeLists.txt
apps/predicate_visualization/include/: cgal_stuff.h
apps/predicate_visualization/src/: main.cpp
apps/visualization/: CMakeLists.txt
apps/visualization/include/: visualization.h
apps/visualization/src/: main.cpp  visualization.cpp
include/fdml/: fdml.h  fdml_le3.h  fdml_utils.h  geometry.h  kdtree.h  random.h
include/se3loc/: geometry.h  kdtree.h  random.h
libs/: CMakeLists.txt
libs/se3loc/: CMakeLists.txt
libs/se3loc/include/: geometry.h  kdtree.h
libs/se3loc/src/: geometry.cpp  kdtree.cpp
python/: collision_detection.py  exp_tello_odometry.py  isminksum.py  tmp.txt  tmp2.txt
python/conversions/: ply_to_obj.py
python/drones/: crazyflie_simple.py  lighthouse_ranger_joystick.py  measurements.py
python/figures/: results_140924.csv  sim_figures.py  visualize_V_plus_gammaV.py
python/notebooks/: experiment_accuracy.ipynb  test_server.ipynb
python/research/: fdgv.py
python/server/: README.md  fdml.service  fdml_nginx  gunicorn_startup.sh  server.py
python/tello/: log.txt  parse_log.py  tello_controller_video.py  traj.txt  traj2.txt
raw/: log.txt
resources/fdml/: demo_scene.lua
resources/fdml/drone/: SM_drone.fbx
resources/fdml/experiments/: exp_mr_lh_363.json  exp_mr_lh_446a.json  measurements_446_1.json  measurements_446_3.json
resources/fdml/experiments/_old/: measurements_363_1.json  measurements_446_5.json
resources/fdml/experiments/exp_mr_fl_363/: measurements_1.json  measurements_5.json
resources/fdml/experiments/exp_mr_fl_446a/: measurements_7.json
resources/fdml/scans/240521-135812/: 240521-135812.mtl
resources/fdml/scans/240521-141038/: 240521-141038.mtl
resources/fdml/scans/labs/: lab363_v3.mtl  lab446_v4.mtl
resources/fdml/trajectories/: elaborate_contraption.json
resources/fdml/trajectories/_old/: measurements_446_2.json  measurements_446_4.json  measurements_446a_2.json
resources/fdml/trajectories/exp_mr_fl_363/: locations.txt  measurements_2.json  measurements_3.json  measurements_4.json  measurements_dynamic.json
resources/fdml/trajectories/exp_mr_fl_446a/: locations.txt  measurements_2.json  measurements_3.json  measurements_5.json  measurements_6.json  measurements_dynamic_1.json  measurements_dynamic_2.json
results/: ex_kdtree_construct.csv  ex_kdtree_nn.csv  ex_kdtree_nn_omp.csv  experiment_accuracy.csv  mr_fl_gt_comparison.xlsx  mr_lh_gt_comparison.xlsx  results.db  results_01.db  results_01.db-journal  results_140924.db  results_flowDeckvsLighthouse_zed_values.csv  results_initial.db  results_mr_lh_363_m1.db  results_mr_lh_446a_m1.db  results_v3.csv  results_v3.db  results_v3_2.db
results/json/363_results/: lighthouse_flow_measurements.csv
results/json/446a_results/: lighthouse_flow_measurements.csv  lighthouse_multiranger_measurements.json
results/json/446a_results/multiranger_flow_results/: measurements_1.json  measurements_4.json
scripts/: evaluate_experiments.py  pkg_rsources.zsh  utils.py
scripts/experiments/: experiments.py  run.py
tests/: CMakeLists.txt
tests/include/: tests.h
tests/src/: test_kdtree.cpp
